--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     font-family: 'Montserrat', sans-serif;
-    color: white;
+    color: rgb(224, 224, 224);
 }
 
 #particles-js {
@@ -21,14 +21,58 @@
     text-align: center;
     padding: 30px;
     color: rgb(238, 238, 238);
+    text-shadow: 2px 2px 4px #000000;
 }
 
-.grow{
+#header:hover{
+    color: white;
+    text-shadow: 2px 2px 4px #000000;}
+.grow {
     transition: all .4s ease-in-out;
 }
 
 .grow:hover {
     transform: scale(1.1);
+}
+
+#container {
+    width: 50px;
+    height: 100px;
+    border: solid, black, 2px;
+    background: transparent;
+}
+
+#typeDiv {}
+
+img {
+    width: 20vmax;
+    margin: 1.5rem auto;
+    display: flex;
+    border-radius: 100vmax;
+    background: white;
+    transition: all 0.5s ease;
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+}
+
+img:hover {
+    transform: scale(1.05);
+    transition: all 0.5s ease;
+    border: solid 5px white
+    -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
+}
+
+#main {
+    vertical-align: middle;
+    height:100%;
+    align-content: center;
+    align-items: center;
+    align-self: center;
+    margin: auto;
+    display: inline;
 }
 
 .mainDiv {
