--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
     background: transparent;
 }
 
-#typeDiv {}
+
 
 img {
     width: 20vmax;
@@ -59,7 +59,7 @@ img {
 img:hover {
     transform: scale(1.05);
     transition: all 0.5s ease;
-    border: solid 5px white
+    border: solid 5px white;
     -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
@@ -67,7 +67,6 @@ img:hover {
 
 #main {
     vertical-align: middle;
-    height:100%;
     align-content: center;
     align-items: center;
     align-self: center;
