--- a/style.css
+++ b/style.css
@@ -1,32 +1,33 @@
 * {
     font-family: 'Montserrat', sans-serif;
-    color: rgb(224, 224, 224);
 }
 
-#particles-js {
-    height: 100%;
-    background: url(portfolioBG.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-#bg {
+#navheader {
     background-color: rgba(128, 128, 128, 0.445);
+    font-family: 'Montserrat', sans-serif;
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 #header {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 32px;
+    font-size: 28px;
     text-align: center;
-    padding: 30px;
-    color: rgb(238, 238, 238);
+    color: rgb(224, 224, 224);
+    padding: 20px;
     text-shadow: 2px 2px 4px #000000;
 }
 
-#header:hover{
+#header a {
+    text-decoration: none;
+    color: rgb(224, 224, 224);
+}
+
+#header a:hover {
     color: white;
-    text-shadow: 2px 2px 4px #000000;}
+    text-shadow: 2px 2px 4px #000000;
+}
+
 .grow {
     transition: all .4s ease-in-out;
 }
@@ -35,21 +36,91 @@
     transform: scale(1.1);
 }
 
-#container {
-    width: 50px;
-    height: 100px;
-    border: solid, black, 2px;
-    background: transparent;
+hr {
+    max-width: 75vw;
+    margin: auto;
+    height: 5px;
+    color: white;
 }
 
+/*home page starts*/
+#home {
+    margin-top: 0rem;
+    background: url(home.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
 
+/*home page ends*/
+
+/*about page starts*/
+#about {
+    margin-top: 0rem;
+    top: 0;
+    background: url(about.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+
+/*about page ends*/
+
+/*portfolio page starts*/
+#portfolio {
+    margin-top: 0rem;
+    top: 0;
+    background: url(portfolio.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+
+/*portfolio page ends*/
+
+/*contact page starts*/
+#contact {
+    margin-top: 0rem;
+    top: 0;
+    background: url(contact.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+
+/*contact page ends*/
+
+#about {
+    
+    padding-top:190px;
+    padding-left: 50px;
+    padding-right: 50px;
+    justify-content: center;
+    display: flexbox;
+    text-align: center;
+    font-size: 22px;
+    color:rgb(224, 224, 224);
+    text-shadow: 2px 2px 4px #000000;
+
+}
+#portfolio{
+
+    padding-top:280px;
+    color:rgb(224, 224, 224);
+    text-shadow: 2px 2px 4px #000000;
+
+}
 
 img {
     width: 20vmax;
     margin: 1.5rem auto;
     display: flex;
     border-radius: 100vmax;
-    background: white;
+    /*this making the image circular*/
     transition: all 0.5s ease;
     -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
@@ -66,19 +137,42 @@ img:hover {
 }
 
 #main {
+    padding-top: 200px;
     vertical-align: middle;
     align-content: center;
     align-items: center;
     align-self: center;
-    margin: auto;
-    display: inline;
+    display: flex;
 }
 
 .mainDiv {
     justify-content: center;
 }
 
-hr {
-    max-width: 75vw;
-    margin: auto;
+h2 {
+    margin-top: auto;
+}
+
+#icons a{
+    color: rgb(224, 224, 224);
+    text-shadow: 2px 2px 4px #000000;
+    font-size: 2.5rem;
+    margin: 0 0.7rem;
+}
+
+#icons a:hover{
+    color: white;
+    
+}
+footer {
+    text-align: center;
+    justify-content: center;
+    background-color: rgba(128, 128, 128, 0.445);
+    padding: 5px;
+    color:rgb(224, 224, 224);
+    text-shadow: 2px 2px 4px #000000;
+}
+
+.nav-link {
+    color: white important;
 }
