--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@
 }
 
 #navheader {
-    background-color: rgba(128, 128, 128, 0.445);
+    background: white;
     font-family: 'Montserrat', sans-serif;
     position: fixed;
     top: 0;
     width: 100%;
+    box-shadow: -3px -3px 12px 5px rgba(255, 255, 255, 0.75), 3px 3px 12px 5px rgba(0, 0, 0, 0.2);
 }
 
 #header {
@@ -204,9 +205,9 @@ h2 {
     text-align: center;
     bottom: 0px;
     position: absolute;
-    background-color: rgba(128, 128, 128, 0.445);
+    background:white;
     padding: 8px;
-    color: rgb(224, 224, 224);
+    color: black;
     text-shadow: 2px 2px 4px #000000;
     width: 100%;
 
