--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -82,7 +82,7 @@
 
 .irregular-grid-3-columns .portfolio-item-overlay,
 .portfolio-grid-2-columns-style_02 .portfolio-item-overlay {
-	background: #1b1b1b;
+	background: #fff;
 }
 .read-more_02:hover{
 	color: white;
